# fingerprint-full-matchers-benchmark

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: benchmark_contract.md  nbis_1000_ppi_downsampler_v1.md  nbis_build_environment_v1.md  sourceafis_frozen_cohort_v1.md  sourceafis_policy_application_v1.md  sourceafis_runtime_v1.md
migration-audit/: AUDIT_SUMMARY.txt  DEPENDENCY_GRAPH.md  MIGRATION_AUDIT.md  migration_manifest.json
tests/: conftest.py  test_benchmark_contract.py  test_benchmark_runner.py  test_forbidden_runtime_coupling.py  test_nbis_1000_ppi_downsampler_v1.py  test_nbis_build_environment_v1.py  test_nbis_candidate_audit_v1.py  test_nbis_candidate_v1_erratum_1.py  test_protocol_manifest_reader.py  test_sourceafis_adapter.py  test_sourceafis_client.py  test_sourceafis_decision_policy_v1.py  test_sourceafis_frozen_cohort_v1.py  test_sourceafis_policy_application_v1.py  test_sourceafis_runtime_qualification.py  test_sourceafis_sidecar_lifecycle.py  test_supervisor_50x10_v1.py
tools/: apply_sourceafis_decision_policy_v1.py  audit_nbis_1000_ppi_downsampler_v1.py  build_supervisor_50x10_v1.py  freeze_nbis_build_environment_v1.py  qualify_sourceafis_runtime_v1.py  recompute_nbis_source_tree_identity_v2.py  run_nbis_1000_ppi_downsampler_tests_v1.py  run_sourceafis_frozen_cohort_v1.py  validate_nbis_1000_ppi_downsampler_v1.py  validate_nbis_build_environment_v1.py  validate_nbis_candidate_audit_v1.py  validate_nbis_candidate_v1_erratum_1.py  validate_sourceafis_decision_policy_v1.py  validate_sourceafis_frozen_cohort_v1.py  (+2 more)
(+129 files in other folders)
